# ogs

./: .gitattributes  .gitignore  .gitmodules  2018-05-31-test-news.json  CMakeLists.txt  CTestConfig.cmake  Jenkinsfile  azure-pipelines.yml  netlify.toml
Applications/ApplicationsLib/: CMakeLists.txt  ProjectData.cpp
Applications/CLI/: CMakeLists.txt  ogs.cpp  ogs_embedded_python.cpp  pdaf.f90  pdaf.h
Applications/DataExplorer/: CMakeLists.txt  DataExplorer.cmake
Applications/DataExplorer/Base/: CMakeLists.txt
Applications/DataExplorer/DataView/: CMakeLists.txt
Applications/DataExplorer/NetCdfDialog/: CMakeLists.txt
Applications/DataExplorer/VtkVis/: CMakeLists.txt
Applications/DataHolderLib/: CMakeLists.txt
Applications/FileIO/: CMakeLists.txt
Applications/InSituLib/: CMakeLists.txt
BaseLib/: CMakeLists.txt  ConfigTree.cpp
GeoLib/: CMakeLists.txt
MaterialLib/: CMakeLists.txt
MathLib/: CMakeLists.txt
MathLib/LinAlg/PETSc/: PETScTools.cpp  PETScVector.h
MeshGeoToolsLib/: BoundaryElementsAtPoint.cpp  CMakeLists.txt
MeshLib/: CMakeLists.txt
NumLib/: CMakeLists.txt
NumLib/ODESolver/: NonlinearSolver.cpp
ProcessLib/: CMakeLists.txt
ProcessLib/BoundaryCondition/Python/: BHEInflowPythonBoundaryCondition.cpp  BHEInflowPythonBoundaryCondition.h  BHEInflowPythonBoundaryConditionModule.cpp  BHEInflowPythonBoundaryConditionModule.h  BHEInflowPythonBoundaryConditionPythonSideInterface.h  CMakeLists.txt
ProcessLib/ComponentTransport/: CMakeLists.txt
ProcessLib/GroundwaterFlow/: CMakeLists.txt
ProcessLib/HT/: CMakeLists.txt
ProcessLib/HeatConduction/: CMakeLists.txt
ProcessLib/HeatTransportBHE/: CMakeLists.txt  CreateHeatTransportBHEProcess.cpp  HeatTransportBHEProcess.cpp  HeatTransportBHEProcess.h  HeatTransportBHEProcessData.h  Tests.cmake
ProcessLib/HeatTransportBHE/BHE/: BHECommon.h  BHECommonCoaxial.h  BHECommonUType.h  BHE_1U.cpp  BHE_1U.h  BHE_2U.h  BHE_CXA.h  BHE_CXC.h  CreateBHE1U.cpp  CreateBHECoaxial.cpp  CreateBHEUType.cpp  FlowAndTemperatureControl.h
ProcessLib/HydroMechanics/: CMakeLists.txt
ProcessLib/LIE/: CMakeLists.txt
ProcessLib/LiquidFlow/: CMakeLists.txt
ProcessLib/PhaseField/: CMakeLists.txt
ProcessLib/RichardsComponentTransport/: CMakeLists.txt
ProcessLib/RichardsFlow/: CMakeLists.txt
ProcessLib/RichardsMechanics/: CMakeLists.txt
ProcessLib/SmallDeformation/: CMakeLists.txt
ProcessLib/TES/: CMakeLists.txt
ProcessLib/ThermalTwoPhaseFlowWithPP/: CMakeLists.txt
ProcessLib/ThermoMechanicalPhaseField/: CMakeLists.txt
ProcessLib/ThermoMechanics/: CMakeLists.txt
ProcessLib/TwoPhaseFlowWithPP/: CMakeLists.txt
ProcessLib/TwoPhaseFlowWithPrho/: CMakeLists.txt
SimpleTests/MeshTests/: CMakeLists.txt  DuneGrid.cpp
Tests/: CMakeLists.txt
scripts/cmake/: CCacheSetup.cmake  CMakeSetup.cmake  CompilerSetup.cmake  ConanSetup.cmake  Coverage.cmake  CppCheck.cmake  CppDependencies.cmake  DocumentationSetup.cmake  Find.cmake  MarkVariablesAdvanced.cmake  MetisSetup.cmake  ProjectSetup.cmake  SubmoduleSetup.cmake
scripts/cmake/packaging/: PackagingLinux.cmake  (+3 more)
scripts/docker/: Dockerfile.clang.full  Dockerfile.clang.minimal  Dockerfile.gcc.full  Dockerfile.gcc.gui  Dockerfile.gcc.minimal  Dockerfile.win.vs2017
scripts/test/: CDash.cmake  CDashSetup.cmake
web/: config.toml
web/src/: index.js
(+30 files in other folders)
